--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
-[submodule "agent_lab"]
+[submodule "agent_ood_lab"]
 	path = agent_lab
-	url = git@github.com:rowingchenn/AgentLab_OOD.git
-[submodule "browser_gym"]
+	url = git@github.com:rowingchenn/agent-ood-lab.git
+[submodule "agent_ood_gym"]
 	path = browser_gym
-	url = git@github.com:rowingchenn/BrowserGym_OOD.git
-[submodule "work_arena"]
-	path = work_arena
-	url = git@github.com:rowingchenn/WorkArena_OOD.git
+	url = git@github.com:rowingchenn/agent-ood-gym.git
